fix add new credit card modal overflowing on mobile

--- a/src/components/add-new-credit-card-modal/add-new-credit-card-modal.module.css
+++ b/src/components/add-new-credit-card-modal/add-new-credit-card-modal.module.css
@@ -5,6 +5,7 @@
   border-radius: var(--border-radius-md);
   backdrop-filter: blur(var(--blur-sm));
   width: var(--add-new-credit-card-modal-width);
+  max-width: 100%;
 }
 
 .head {
